--- a/pricing.html
+++ b/pricing.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 07:29:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 09 2021 06:21:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b18b61765294" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
+  <base href="https://storipress.com">
   <title>Plans &amp; Pricing | Storipress</title>
   <meta content="Absolutely free, with custom domain support. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to start a professional publication with Storipress, and it&#x27;s free forever. $8USD. Per month billed annually, or $12 billed monthly. Remove the Storipress logo and unlock multi-publication support. $16USD. Per month billed annually, or $21 billed monthly." name="description">
   <meta content="Plans &amp; Pricing | Storipress" property="og:title">
@@ -38,12 +39,41 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5WLPRZG');</script>
   <!--  End Google Tag Manager  -->
+  <script>
+window.Papercups = {
+  config: {
+    accountId: "137ea282-e7d3-49de-86ba-c321bb6e58f5",
+    title: "Hey there!",
+    subtitle: "Storipress: The Best Publishing Platform Ever",
+    primaryColor: "#0693e3",
+    greeting: "Have a question about Storipress? Just want to chat with the founders? Shoot us a message about anything",
+    awayMessage: "We're based in Australia so it's currently night time. I'll respond first thing when i'm awake",
+    newMessagePlaceholder: "Type your message here",
+    showAgentAvailability: true,
+    agentAvailableText: "We're online right now!",
+    agentUnavailableText: "We're sleeping, we'll respond as soon as possible 😴💤💤",
+    requireEmailUpfront: true,
+    iconVariant: "filled",
+    baseUrl: "https://app.papercups.io",
+    // Optionally include data about your customer here to identify them
+    // customer: {
+    //   name: __CUSTOMER__.name,
+    //   email: __CUSTOMER__.email,
+    //   external_id: __CUSTOMER__.id,
+    //   metadata: {
+    //     plan: "premium"
+    //   }
+    // }
+  },
+};
+</script>
+  <script type="text/javascript" async="" defer="" src="https://app.papercups.io/widget.js"></script>
 </head>
 <body class="body">
   <div data-collapse="small" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
       <div class="div-block-1472">
-        <a href="index" class="nav-logo-link w-nav-brand"><img src="images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
+        <a href="index" class="nav-logo-link w-nav-brand"><img src="images/SP-Logo-BLACK.svg" width="145" alt="Storipress Logo" class="logo-image"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="db1914b8-e2ca-f573-af63-17a944120f43" class="tooltip-trigger navbar feat">
@@ -149,7 +179,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
       <div class="div-block-1473">
-        <a href="index" class="link-block w-inline-block"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
+        <a href="index" class="link-block w-inline-block"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="Storipress Logo" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -280,10 +310,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="text-block-63">For early stage indie publishers with a writing team<br></div>
           </div>
           <div class="pricing-column-parent pricing">
-            <h3 class="pricingtable-price">$US8/<span class="pricing-hovertext">mth*</span><br></h3>
+            <h3 class="pricingtable-price">$US11/<span class="pricing-hovertext">mth*</span><br></h3>
             <div data-w-id="3637108b-9e91-9a78-64b6-03cc8b3db6f2" class="tooltip-trigger">
               <div style="opacity:1;display:none" class="tooltip">
-                <div><strong>*Per Editor, per month, when paying once a year<br><br>‍</strong>$US12 per active Editor when paying monthly<br></div>
+                <div><strong>*Per Editor, per month, when paying once a year<br><br>‍</strong>$US15 per active Editor when paying monthly<br></div>
                 <div class="tooltip-arrow"></div>
               </div>
             </div>
@@ -313,10 +343,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="text-block-63">For larger publishers who need brand building and audience engagement features<br></div>
           </div>
           <div class="pricing-column-parent pricing">
-            <h3 class="pricingtable-price">$US16/<span class="pricing-hovertext">mth*</span><br></h3>
+            <h3 class="pricingtable-price">$US18/<span class="pricing-hovertext">mth*</span><br></h3>
             <div data-w-id="bee87014-f80b-6b5a-f8b1-e2131ac6363f" class="tooltip-trigger">
               <div style="opacity:1;display:none" class="tooltip">
-                <div><strong>*Per Editor, per month, when paying once a year<br><br>‍</strong>$US21 per active Editor when paying monthly<br></div>
+                <div><strong>*Per Editor, per month, when paying once a year<br><br>‍</strong>$US28 per active Editor when paying monthly<br></div>
                 <div class="tooltip-arrow"></div>
               </div>
             </div>
@@ -346,7 +376,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <div class="pricing-column-parent last">
             <h3 class="pricingtable-plan">Enterprise</h3>
-            <div class="text-block-63">For extra large publishers, our cutting edge CMS architecture reduces your tech spend by 90% — guaranteed.<br></div>
+            <div class="text-block-63">For series publishers, our cutting edge CMS architecture reduces your tech spend by 90% — guaranteed.<br></div>
           </div>
           <div class="pricing-column-parent last"></div>
           <div class="pricing-column-parent last cta-button">
@@ -391,7 +421,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
-          <div class="feat">Hosting, storage and CDN </div>
+          <div class="feat">Page views per month</div>
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
@@ -539,7 +569,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
-          <div class="feat">Unlimited</div>
+          <div class="feat">25k</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -576,7 +606,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
-          <div class="feat">Unlimited</div>
+          <div class="feat">1M</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -615,7 +645,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
-          <div class="feat">Unlimited</div>
+          <div class="feat">1M</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -722,7 +752,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-hover="" data-delay="0" class="dropdown-3 w-dropdown">
         <div class="dropdown-toggle w-dropdown-toggle">
           <div class="w-icon-dropdown-toggle"></div>
-          <div class="dropdown-text">High performance? No bandwidth limits? What&#x27;s the catch?</div>
+          <div class="dropdown-text">High performance? 1M pageviews? What&#x27;s the catch?</div>
         </div>
         <nav class="dropdown-list-2 w-dropdown-list">
           <div class="text-block-65">There&#x27;s no catch. Sign up for free, create a publication, and test Storipress&#x27;s performance yourself on Google Pagespeed. Storipress&#x27; next-gen app architecture enables performance at an unheard of price. <br><br>Storipress is one of the most cutting edge CMSs ever made which enables us to provide our performance at our price point: <strong class="bold-text-9">it&#x27;s the world&#x27;s first serverless, shared user multi-tenant CMS</strong>, with a fully serverless client backend (enabling efficient multi-tenancy at scale) and &#x27;JAMstack&#x27; static site delivery.<br><br>Basically, by using cutting edge technology, publications on Storipress load in the blink of an eye, and are exponentially (100x+) more affordable for us to operate and scale (meaning you pay less).<br></div>
@@ -824,7 +854,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <h2 class="heading-12">Join our Beta</h2>
         <div class="form-block-2 w-form">
           <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="footer-form">
-            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta" data-wait="Please wait..." class="footer-form-input-submit w-button">
+            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Get Early Access" data-wait="Please wait..." class="footer-form-input-submit w-button">
           </form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
