--- a/create.html
+++ b/create.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 07:29:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 09 2021 06:21:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b102a4765280" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
+  <base href="https://storipress.com">
   <title>Editor | Storipress</title>
   <meta content="With Storipress&#x27; editor, experience real-time collaboration on a visual canvas from within your CMS. There&#x27;s no complex dashboard or disconnected back end — just you, your publication, and the content you want to change." name="description">
   <meta content="Editor | Storipress" property="og:title">
@@ -38,12 +39,41 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5WLPRZG');</script>
   <!--  End Google Tag Manager  -->
+  <script>
+window.Papercups = {
+  config: {
+    accountId: "137ea282-e7d3-49de-86ba-c321bb6e58f5",
+    title: "Hey there!",
+    subtitle: "Storipress: The Best Publishing Platform Ever",
+    primaryColor: "#0693e3",
+    greeting: "Have a question about Storipress? Just want to chat with the founders? Shoot us a message about anything",
+    awayMessage: "We're based in Australia so it's currently night time. I'll respond first thing when i'm awake",
+    newMessagePlaceholder: "Type your message here",
+    showAgentAvailability: true,
+    agentAvailableText: "We're online right now!",
+    agentUnavailableText: "We're sleeping, we'll respond as soon as possible 😴💤💤",
+    requireEmailUpfront: true,
+    iconVariant: "filled",
+    baseUrl: "https://app.papercups.io",
+    // Optionally include data about your customer here to identify them
+    // customer: {
+    //   name: __CUSTOMER__.name,
+    //   email: __CUSTOMER__.email,
+    //   external_id: __CUSTOMER__.id,
+    //   metadata: {
+    //     plan: "premium"
+    //   }
+    // }
+  },
+};
+</script>
+  <script type="text/javascript" async="" defer="" src="https://app.papercups.io/widget.js"></script>
 </head>
 <body class="body features">
   <div data-collapse="small" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
       <div class="div-block-1472">
-        <a href="index" class="nav-logo-link w-nav-brand"><img src="images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
+        <a href="index" class="nav-logo-link w-nav-brand"><img src="images/SP-Logo-BLACK.svg" width="145" alt="Storipress Logo" class="logo-image"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="db1914b8-e2ca-f573-af63-17a944120f43" class="tooltip-trigger navbar feat">
@@ -149,7 +179,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
       <div class="div-block-1473">
-        <a href="index" class="link-block w-inline-block"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
+        <a href="index" class="link-block w-inline-block"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="Storipress Logo" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -400,7 +430,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h2 class="heading-10">All features</h2>
       <div class="div-block-1397">
         <a href="manage" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/workflow.svg" loading="lazy" alt=""></div>
+          <div class="other-image-parent"><img src="images/Workflow.svg" loading="lazy" alt=""></div>
           <div class="div-block-1400">
             <h4 class="heading-11">Workflow</h4>
             <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
@@ -443,7 +473,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <h2 class="heading-12">Join our Beta</h2>
         <div class="form-block-2 w-form">
           <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="footer-form">
-            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta" data-wait="Please wait..." class="footer-form-input-submit w-button">
+            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Get Early Access" data-wait="Please wait..." class="footer-form-input-submit w-button">
           </form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
