--- a/vs/medium.html
+++ b/vs/medium.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 07:29:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 09 2021 06:21:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b1990b765291" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
+  <base href="https://storipress.com">
   <title>Storipress vs. Medium: Gain ownership of your content</title>
-  <meta content="Thinking of migrating from Medium to WordPress? On the surface, that may seem like a good idea. But if you dig deeper, there are better alternatives. Read our comparison of these two platforms and discover why Storipress is a better alternative for bloggers today" name="description">
+  <meta content="Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work. Storipress offers a platform for you to build a brand around your content, empowering your content to go further." name="description">
   <meta content="Storipress vs. Medium: Gain ownership of your content" property="og:title">
-  <meta content="Thinking of migrating from Medium to WordPress? On the surface, that may seem like a good idea. But if you dig deeper, there are better alternatives. Read our comparison of these two platforms and discover why Storipress is a better alternative for bloggers today" property="og:description">
+  <meta content="Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work. Storipress offers a platform for you to build a brand around your content, empowering your content to go further." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
   <meta content="Storipress vs. Medium: Gain ownership of your content" property="twitter:title">
-  <meta content="Thinking of migrating from Medium to WordPress? On the surface, that may seem like a good idea. But if you dig deeper, there are better alternatives. Read our comparison of these two platforms and discover why Storipress is a better alternative for bloggers today" property="twitter:description">
+  <meta content="Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work. Storipress offers a platform for you to build a brand around your content, empowering your content to go further." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -38,12 +39,41 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5WLPRZG');</script>
   <!--  End Google Tag Manager  -->
+  <script>
+window.Papercups = {
+  config: {
+    accountId: "137ea282-e7d3-49de-86ba-c321bb6e58f5",
+    title: "Hey there!",
+    subtitle: "Storipress: The Best Publishing Platform Ever",
+    primaryColor: "#0693e3",
+    greeting: "Have a question about Storipress? Just want to chat with the founders? Shoot us a message about anything",
+    awayMessage: "We're based in Australia so it's currently night time. I'll respond first thing when i'm awake",
+    newMessagePlaceholder: "Type your message here",
+    showAgentAvailability: true,
+    agentAvailableText: "We're online right now!",
+    agentUnavailableText: "We're sleeping, we'll respond as soon as possible 😴💤💤",
+    requireEmailUpfront: true,
+    iconVariant: "filled",
+    baseUrl: "https://app.papercups.io",
+    // Optionally include data about your customer here to identify them
+    // customer: {
+    //   name: __CUSTOMER__.name,
+    //   email: __CUSTOMER__.email,
+    //   external_id: __CUSTOMER__.id,
+    //   metadata: {
+    //     plan: "premium"
+    //   }
+    // }
+  },
+};
+</script>
+  <script type="text/javascript" async="" defer="" src="https://app.papercups.io/widget.js"></script>
 </head>
 <body class="body">
   <div data-collapse="small" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
       <div class="div-block-1472">
-        <a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
+        <a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="Storipress Logo" class="logo-image"></a>
         <div class="navlinks">
           <div>Features</div><img src="../images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="db1914b8-e2ca-f573-af63-17a944120f43" class="tooltip-trigger navbar feat">
@@ -162,7 +192,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="comparision-row _1st-row">
         <div class="div-block-1446 _1st-column"></div>
         <div class="comparison-columns">
-          <div class="div-block-1446 comparision-rows"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" width="180" alt="" class="comparison-logo jraft"></div>
+          <div class="div-block-1446 comparision-rows"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" width="180" alt="Storipress Logo" class="comparison-logo jraft"></div>
           <div class="div-block-1446 comparision-rows"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="Medium Logo" class="comparison-logo"></div>
         </div>
       </div>
@@ -172,7 +202,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-69"></div>
+            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="Storipress Logo" class="image-69"></div>
             <div class="emoticon green">｡◕ ‿ ◕｡</div>
             <div class="text-block-59">With Storipress, your content is yours. Setup a custom domain and design and build a publication of your dreams, and with best-in-class SEO and optimisation, ensure the world reads it.</div>
           </div>
@@ -189,7 +219,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-69"></div>
+            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="Storipress Logo" class="image-69"></div>
             <div class="emoticon green">＼(＾O＾)／</div>
             <div class="text-block-59">From our article board to real-time editing, Storipress is built from the ground up to be collaborative.</div>
           </div>
@@ -206,7 +236,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-69"></div>
+            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="Storipress Logo" class="image-69"></div>
             <div class="emoticon green">＼(＾O＾)／</div>
             <div class="text-block-59">Storipress&#x27; component based approach is specifically designed for building publications. With over 100+ templates, you can customise everything visually.</div>
           </div>
@@ -223,7 +253,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-69"></div>
+            <div class="div-block-1449"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="Storipress Logo" class="image-69"></div>
             <div class="emoticon green">＼(＾O＾)／</div>
             <div class="text-block-59">Simple on-page editing, minimal UI. Storipress is probably the most easy to learn yet powerful CMS ever designed.</div>
           </div>
@@ -295,7 +325,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
       <div class="div-block-1473">
-        <a href="../index" class="link-block w-inline-block"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
+        <a href="../index" class="link-block w-inline-block"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="Storipress Logo" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="../images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -363,7 +393,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <h2 class="heading-12">Join our Beta</h2>
         <div class="form-block-2 w-form">
           <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="footer-form">
-            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta" data-wait="Please wait..." class="footer-form-input-submit w-button">
+            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Get Early Access" data-wait="Please wait..." class="footer-form-input-submit w-button">
           </form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
