--- a/legal/global-privacy-policy.html
+++ b/legal/global-privacy-policy.html
@@ -73,7 +73,7 @@ window.Papercups = {
   <div data-collapse="small" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
       <div class="div-block-1472">
-        <a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="Storipress Logo" class="logo-image"></a>
+        <a href=".." class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="Storipress Logo" class="logo-image"></a>
         <div class="navlinks">
           <div>Features</div><img src="../images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="db1914b8-e2ca-f573-af63-17a944120f43" class="tooltip-trigger navbar feat">
@@ -270,7 +270,7 @@ window.Papercups = {
     <div class="footer-flex-container">
       <div class="div-block-1402">
         <div class="footer-logo-contact-div">
-          <a href="../index" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
+          <a href=".." class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taipei + Taichung, Taiwan<br></div>
           <div class="div-block-3">
             <a href="mailto:hello@storipress.com?subject=To%20my%20mates%20%40%20Storipress%20..." class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a>
