--- a/legal/terms.html
+++ b/legal/terms.html
@@ -73,7 +73,7 @@ window.Papercups = {
   <div data-collapse="small" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
       <div class="div-block-1472">
-        <a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="Storipress Logo" class="logo-image"></a>
+        <a href=".." class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="Storipress Logo" class="logo-image"></a>
         <div class="navlinks">
           <div>Features</div><img src="../images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="db1914b8-e2ca-f573-af63-17a944120f43" class="tooltip-trigger navbar feat">
@@ -199,7 +199,7 @@ window.Papercups = {
       <h1 class="heading-25">2. Acknowledgement &amp; acceptance of terms</h1>
       <p class="legal-paragraph-text">In addition, when using the Service, you shall be subject to any posted guidelines or rules applicable to the Service that may contain terms and conditions in addition to those in the Terms of Service.  By using the Service or accessing the Sites, you agree to these Terms of Service, the <a href="../legal/global-privacy-policy" target="_blank" class="link-6">Global Privacy Policy</a> (incorporated herein by reference), the <a href="../legal/publisher-agreement" class="link-6">Publisher Agreement</a>, and our <a href="../legal/content-guidelines" class="link-6">Content Guidelines</a>. If you do not agree, do not use our Service.</p>
       <p class="legal-paragraph-text">Our Service may integrate with other services on a number of platforms provided by third parties, including Email Processors (e.g. Mailchimp). Please be aware that your activities on each of these platforms may be subject to additional terms of service for that particular platform.</p>
-      <p class="legal-paragraph-text">Certain parts of the Service may be subject to additional terms and conditions specified by us from time to time; your use of such Service is subject to those additional terms and conditions, which are incorporated into these Terms of Service by this reference. Prices of the Service are subject to change upon 30 days’ notice from us. Such notice may be provided at any time by posting the changes to the <a href="../index" target="_blank" class="link-6">Storipress Site</a> or the Service itself. Storipress shall not be liable to you or to any third party for any modification, price change, suspension, or discontinuance of the Service.</p>
+      <p class="legal-paragraph-text">Certain parts of the Service may be subject to additional terms and conditions specified by us from time to time; your use of such Service is subject to those additional terms and conditions, which are incorporated into these Terms of Service by this reference. Prices of the Service are subject to change upon 30 days’ notice from us. Such notice may be provided at any time by posting the changes to the <a href=".." target="_blank" class="link-6">Storipress Site</a> or the Service itself. Storipress shall not be liable to you or to any third party for any modification, price change, suspension, or discontinuance of the Service.</p>
     </div>
     <div class="div-block-1454">
       <h1 class="heading-25">3. Eligibility</h1>
@@ -346,7 +346,7 @@ window.Papercups = {
     <div class="footer-flex-container">
       <div class="div-block-1402">
         <div class="footer-logo-contact-div">
-          <a href="../index" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
+          <a href=".." class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taipei + Taichung, Taiwan<br></div>
           <div class="div-block-3">
             <a href="mailto:hello@storipress.com?subject=To%20my%20mates%20%40%20Storipress%20..." class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a>
