updated pricing table

--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jun 09 2021 06:21:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 11 2021 05:28:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b18b61765294" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -245,7 +245,7 @@ window.Papercups = {
   </div>
   <div class="comparison-hero pricing">
     <div class="div-block-1416">
-      <div class="image-wrapper pricing"><img src="images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 767px) 100vw, (max-width: 991px) 40vw, 41vw" srcset="images/Editor-Comp-p-500.png 500w, images/Editor-Comp-p-800.png 800w, images/Editor-Comp-p-1080.png 1080w, images/Editor-Comp-p-1600.png 1600w, images/Editor-Comp-p-2000.png 2000w, images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
+      <div class="image-wrapper pricing"><img src="images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 767px) 100vw, (max-width: 991px) 859.796875px, 87vw" srcset="images/Editor-Comp-p-500.png 500w, images/Editor-Comp-p-800.png 800w, images/Editor-Comp-p-1080.png 1080w, images/Editor-Comp-p-1600.png 1600w, images/Editor-Comp-p-2000.png 2000w, images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
       <div class="hero-other-wrapper">
         <div class="div-block-1428 pricing">
           <h1 class="heading-16">An innovative pricing model</h1>
@@ -468,7 +468,7 @@ window.Papercups = {
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
-          <div class="feat hovertext">Multi-site accounts</div>
+          <div class="feat hovertext">Multiple publications/account</div>
           <div data-w-id="0f6296c6-5ff2-c695-e19a-410aa8bc23c9" class="tooltip-trigger feattable multisite">
             <div class="tooltip feats">
               <div class="tooltip-arrow"></div>
@@ -567,9 +567,9 @@ window.Papercups = {
           <div class="text-block-68">Personal</div>
         </div>
         <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
+        <div class="feattable-yesno"></div>
         <div class="feattable-yesno">
-          <div class="feat">25k</div>
+          <div class="feat">1 Million</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -606,7 +606,7 @@ window.Papercups = {
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
-          <div class="feat">1M</div>
+          <div class="feat">1 Million</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -645,7 +645,7 @@ window.Papercups = {
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
-          <div class="feat">1M</div>
+          <div class="feat">1 Million</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -657,7 +657,7 @@ window.Papercups = {
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"></div>
+        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
