--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -43,13 +43,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 window.Papercups = {
   config: {
     accountId: "137ea282-e7d3-49de-86ba-c321bb6e58f5",
-    title: "Hey there!",
+    title: "Welcome to Storipress 👋",
     subtitle: "Storipress: The Best Publishing Platform Ever",
     primaryColor: "#0693e3",
-    greeting: "Have a question about Storipress? Just want to chat with the founders? Shoot us a message about anything",
+    greeting: "Questions? Feedback? Let us know below!",
     awayMessage: "We're based in Australia so it's currently night time. I'll respond first thing when i'm awake",
     newMessagePlaceholder: "Type your message here",
-    showAgentAvailability: true,
+    showAgentAvailability: false,
     agentAvailableText: "We're online right now!",
     agentUnavailableText: "We're sleeping, we'll respond as soon as possible 😴💤💤",
     requireEmailUpfront: true,
@@ -67,6 +67,12 @@ window.Papercups = {
   },
 };
 </script>
+<script
+type="text/javascript"
+async
+defer
+src="https://app.papercups.io/widget.js"
+></script>
   <script type="text/javascript" async="" defer="" src="https://app.papercups.io/widget.js"></script>
 </head>
 <body class="body">
