fix multipub copy

--- a/pricing.html
+++ b/pricing.html
@@ -472,7 +472,7 @@ window.Papercups = {
           <div data-w-id="0f6296c6-5ff2-c695-e19a-410aa8bc23c9" class="tooltip-trigger feattable multisite">
             <div class="tooltip feats">
               <div class="tooltip-arrow"></div>
-              <div>Create and manage an unlimited amount of publications using a single, shared account for yourself and your whole editorial team. Easy publication switching allows writers who work cross-publications to easily context switch.<br></div>
+              <div>Create and manage multiple publications using a single, shared account for yourself and your whole writing team. Easy publication switching allows writers who work cross-publications to easily context switch.<br></div>
             </div>
           </div>
           <div class="pricingtable-hovershade"></div>
