Updated multisite enterprise limit

--- a/pricing.html
+++ b/pricing.html
@@ -701,7 +701,7 @@ window.Papercups = {
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
-          <div class="feat">32</div>
+          <div class="feat">Unlimited</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
